--- a/stlye.css
+++ b/stlye.css
@@ -69,7 +69,7 @@ header > h1 {
 .choice {
   border: 4px solid white;
   border-radius: 50%;
-  margin: 0 20px;
+  margin: 70px 35px;
   display: inline-block;
 }
 .choice:hover {
